typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode4.ts.stderr
error: TS1100
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode4.ts:2:1
  |
2 | arguments = 1;
  | ^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('arguments' type=static),
    span: Span {
        lo: BytePos(
            15,
        ),
        hi: BytePos(
            24,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode4.ts:2:1
  |
2 | arguments = 1;
  | ^^^^^^^^^

